--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.42",
+    "markdown": "^0.5.0",
+    "marked": "^0.3.19",
     "meteor-node-stubs": "^0.3.2",
     "react": "^16.3.1",
     "react-addons-pure-render-mixin": "^15.6.2",
