--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-addons-pure-render-mixin": "^15.6.2",
     "react-codemirror": "^1.0.0",
     "react-dom": "^16.3.1",
+    "react-marked-markdown": "^1.4.6",
     "react-mounter": "^1.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2"
